--- a/scss/widgets/dropdown/index.scss
+++ b/scss/widgets/dropdown/index.scss
@@ -5,7 +5,7 @@
 @use "../../palette";
 
 :root {
-    --sleek-dropdown-item-hover-background-color: #{palette.$silverglow};
+    --sleek-dropdown-item-hover-background-color: #{palette.$slate-100};
 }
 
 .dropdown {
