--- a/scss/widgets/strips/index.scss
+++ b/scss/widgets/strips/index.scss
@@ -20,7 +20,7 @@
         &:hover {
             text-decoration: none;
             color: var(--sleek-text-default-color);
-            box-shadow: inset 0.5rem 0 0 -0.25rem palette.$blueglow;
+            box-shadow: inset 0.5rem 0 0 -0.25rem palette.$blue-glow;
         }
 
         &:last-child {
