--- a/scss/widgets/tabs/index.scss
+++ b/scss/widgets/tabs/index.scss
@@ -24,7 +24,7 @@
 
         &:focus,
         &:hover {
-            border-bottom-color: palette.$blueglow;
+            border-bottom-color: palette.$blue-glow;
             color: var(--sleek-text-muted-color);
             text-decoration: none;
         }
