--- a/scss/layouts/site/parts/pnav.dark.scss
+++ b/scss/layouts/site/parts/pnav.dark.scss
@@ -1,5 +1,7 @@
 // Copyright 2026 Furqan Software Ltd. All Rights Reserved.
 
+@use "../../../palette";
+
 :root {
-    --sleek-pnav-menu-item-hover-background-color: #{rgba(#232627, 0.75)};
+    --sleek-pnav-menu-item-hover-background-color: #{palette.$slate-900};
 }
