--- a/scss/widgets/handle/dark.scss
+++ b/scss/widgets/handle/dark.scss
@@ -2,31 +2,43 @@
 
 @use "sass:color";
 
+$handle-default: #a1a1aa; // zinc-400
+$handle-sss: #f43f5e; // rose-500
+$handle-ss: #f59e0b; // amber-500
+$handle-s: #facc15; // yellow-400
+$handle-a: #fed348; // yellow-400
+$handle-b: #a3e635; // lime-400
+$handle-c: #0ea5e9; // sky-500
+$handle-e: #a78bfa; // violet-400
+
 :root {
-    --sleek-handle-default-color: #{color.scale(#bbb5ac, $lightness: 15%)};
-    --sleek-handle-sss-color: #{color.scale(#d95e5d, $lightness: 15%)};
-    --sleek-handle-ss-color: #{color.scale(#fca643, $lightness: 15%)};
-    --sleek-handle-s-color: #{color.scale(#fed348, $lightness: 15%)};
-    --sleek-handle-a-color: #{color.scale(#fed348, $lightness: 15%)};
-    --sleek-handle-b-color: #{color.scale(#82ee84, $lightness: 15%)};
-    --sleek-handle-c-color: #{color.scale(#709fdc, $lightness: 15%)};
-    --sleek-handle-e-color: #{color.scale(#ab85e0, $lightness: 15%)};
+    --sleek-handle-default-color: #{color.scale(
+            $handle-default,
+            $lightness: 15%
+        )};
+    --sleek-handle-sss-color: #{color.scale($handle-sss, $lightness: 15%)};
+    --sleek-handle-ss-color: #{color.scale($handle-ss, $lightness: 15%)};
+    --sleek-handle-s-color: #{color.scale($handle-s, $lightness: 15%)};
+    --sleek-handle-a-color: #{color.scale($handle-a, $lightness: 15%)};
+    --sleek-handle-b-color: #{color.scale($handle-b, $lightness: 15%)};
+    --sleek-handle-c-color: #{color.scale($handle-c, $lightness: 15%)};
+    --sleek-handle-e-color: #{color.scale($handle-e, $lightness: 15%)};
 
-    --sleek-handle-default-background-color: #{rgba(#bbb5ac, 0.05)};
-    --sleek-handle-sss-background-color: #{rgba(#d95e5d, 0.05)};
-    --sleek-handle-ss-background-color: #{rgba(#fca643, 0.05)};
-    --sleek-handle-s-background-color: #{rgba(#fed348, 0.05)};
-    --sleek-handle-a-background-color: #{rgba(#fed348, 0.05)};
-    --sleek-handle-b-background-color: #{rgba(#82ee84, 0.05)};
-    --sleek-handle-c-background-color: #{rgba(#709fdc, 0.05)};
-    --sleek-handle-e-background-color: #{rgba(#ab85e0, 0.05)};
+    --sleek-handle-default-background-color: #{rgba($handle-default, 0.05)};
+    --sleek-handle-sss-background-color: #{rgba($handle-sss, 0.05)};
+    --sleek-handle-ss-background-color: #{rgba($handle-ss, 0.05)};
+    --sleek-handle-s-background-color: #{rgba($handle-s, 0.05)};
+    --sleek-handle-a-background-color: #{rgba($handle-a, 0.05)};
+    --sleek-handle-b-background-color: #{rgba($handle-b, 0.05)};
+    --sleek-handle-c-background-color: #{rgba($handle-c, 0.05)};
+    --sleek-handle-e-background-color: #{rgba($handle-e, 0.05)};
 
-    --sleek-handle-default-glow-background-color: #{rgba(#bbb5ac, 0.1)};
-    --sleek-handle-sss-glow-background-color: #{rgba(#d95e5d, 0.1)};
-    --sleek-handle-ss-glow-background-color: #{rgba(#fca643, 0.1)};
-    --sleek-handle-s-glow-background-color: #{rgba(#fed348, 0.1)};
-    --sleek-handle-a-glow-background-color: #{rgba(#fed348, 0.1)};
-    --sleek-handle-b-glow-background-color: #{rgba(#82ee84, 0.1)};
-    --sleek-handle-c-glow-background-color: #{rgba(#709fdc, 0.1)};
-    --sleek-handle-e-glow-background-color: #{rgba(#ab85e0, 0.1)};
+    --sleek-handle-default-glow-background-color: #{rgba($handle-default, 0.1)};
+    --sleek-handle-sss-glow-background-color: #{rgba($handle-sss, 0.1)};
+    --sleek-handle-ss-glow-background-color: #{rgba($handle-ss, 0.1)};
+    --sleek-handle-s-glow-background-color: #{rgba($handle-s, 0.1)};
+    --sleek-handle-a-glow-background-color: #{rgba($handle-a, 0.1)};
+    --sleek-handle-b-glow-background-color: #{rgba($handle-b, 0.1)};
+    --sleek-handle-c-glow-background-color: #{rgba($handle-c, 0.1)};
+    --sleek-handle-e-glow-background-color: #{rgba($handle-e, 0.1)};
 }
