Tweak primary colors

--- a/scss/_palette.scss
+++ b/scss/_palette.scss
@@ -77,8 +77,8 @@ $stone-950: #0c0a09;
 $dark: $stone-950;
 $ebony: #22313f;
 $blue: #3598dc;
-$green: #16a34a;
-$red: #e11d48;
+$green: #15803d; // green-700
+$red: #f43f5e; // red-500
 $orange: #ea580c;
 $silver: $stone-200;
 
