--- a/scss/_table.scss
+++ b/scss/_table.scss
@@ -17,24 +17,6 @@
         padding: 0.5rem;
     }
 
-    > thead > tr > th:first-child,
-    > tbody > tr > th:first-child,
-    > tfoot > tr > th:first-child,
-    > thead > tr > td:first-child,
-    > tbody > tr > td:first-child,
-    > tfoot > tr > td:first-child {
-        padding-left: 0;
-    }
-
-    > thead > tr > th:last-child,
-    > tbody > tr > th:last-child,
-    > tfoot > tr > th:last-child,
-    > thead > tr > td:last-child,
-    > tbody > tr > td:last-child,
-    > tfoot > tr > td:last-child {
-        padding-right: 0;
-    }
-
     > thead > tr > th {
         font-weight: 500;
 
@@ -93,5 +75,27 @@
         margin-bottom: 15px;
         overflow-y: hidden;
         border: 1px solid var(--sleek-table-border-color);
+    }
+
+    @media screen and (min-width: 768px) {
+        > table {
+            tr > :first-child {
+                padding-left: 0;
+            }
+
+            tr > :last-child {
+                padding-right: 0;
+            }
+        }
+    }
+}
+
+:not(.tablebox) > table {
+    tr > :first-child {
+        padding-left: 0;
+    }
+
+    tr > :last-child {
+        padding-right: 0;
     }
 }
