--- a/scss/themes/dark.scss
+++ b/scss/themes/dark.scss
@@ -89,7 +89,8 @@
             palette.$blue,
             $lightness: -15%
         )};
-    --sleek-button-blue-faint-background-color: #{palette.$blue-700};
+    --sleek-button-blue-faint-background-color: #{palette.$slate-900};
+    --sleek-button-blue-faint-border-color: #{palette.$blue-800};
     --sleek-button-icon-blue-active-filter: invert(100%) sepia(100%)
         saturate(0%) hue-rotate(125deg) brightness(103%) contrast(103%);
     --sleek-button-simple-background-color: #181a1b;
