--- a/scss/widgets/tabs/index.scss
+++ b/scss/widgets/tabs/index.scss
@@ -24,9 +24,7 @@
 
         &:focus,
         &:hover {
-            border-bottom-color: var(
-                --sleek-button-blue-faint-background-color
-            );
+            border-bottom-color: var(--sleek-button-blue-faint-border-color);
             color: var(--sleek-text-muted-color);
             text-decoration: none;
         }
