--- a/scss/_avatar.scss
+++ b/scss/_avatar.scss
@@ -9,7 +9,7 @@
     position: relative;
 
     img {
-        background-color: color.scale(palette.$silver, $lightness: -25%);
+        background-color: palette.$stone-200;
         border-radius: 0.25rem;
     }
 
