--- a/scss/_typography.scss
+++ b/scss/_typography.scss
@@ -114,7 +114,7 @@ dd {
 blockquote {
     margin: 0 0 1.25rem;
     padding: 0.5rem 1.25rem;
-    border-left: 0.25rem solid palette.$silver;
+    border-left: 0.25rem solid palette.$stone-200;
 }
 
 blockquote {
