--- a/scss/_form.scss
+++ b/scss/_form.scss
@@ -91,8 +91,8 @@
 }
 
 fieldset {
-    margin: 0 -20px 30px;
-    padding: 30px 20px 0;
+    margin: 0 -1.25rem 2rem;
+    padding: 2rem 1.25rem 0;
     border-top: 1px solid var(--sleek-surface-border-color-subtle);
 
     &.-closed {
