--- a/scss/_grid.scss
+++ b/scss/_grid.scss
@@ -1,5 +1,9 @@
 // Copyright 2026 Furqan Software Ltd. All Rights Reserved.
 
+@use "sass:math";
+
+$columns: 12;
+
 .row {
     margin-right: -0.25rem;
     margin-left: -0.25rem;
@@ -21,7 +25,55 @@
     &10,
     &11,
     &12 {
+        position: relative;
+        min-height: 1px;
         padding-right: 0.25rem;
         padding-left: 0.25rem;
+    }
+}
+
+[class^="col-xs-"] {
+    float: left;
+}
+
+@for $i from 1 through $columns {
+    .col-xs-#{$i} {
+        width: math.percentage(math.div($i, $columns));
+    }
+}
+
+@media (min-width: 768px) {
+    [class^="col-sm-"] {
+        float: left;
+    }
+
+    @for $i from 1 through $columns {
+        .col-sm-#{$i} {
+            width: math.percentage(math.div($i, $columns));
+        }
+    }
+
+    @for $i from 0 through $columns {
+        .col-sm-offset-#{$i} {
+            margin-left: math.percentage(math.div($i, $columns));
+        }
+    }
+}
+
+@media (min-width: 992px) {
+    [class^="col-md-"] {
+        float: left;
+    }
+
+    @for $i from 1 through $columns {
+        .col-md-#{$i} {
+            width: math.percentage(math.div($i, $columns));
+        }
+    }
+
+    @for $i from 0 through $columns {
+        .col-md-offset-#{$i} {
+            margin-left: math.percentage(math.div($i, $columns));
+        }
     }
 }
