--- a/scss/_reset.scss
+++ b/scss/_reset.scss
@@ -40,6 +40,10 @@ pre {
     margin: 0;
 }
 
+img {
+    vertical-align: middle;
+}
+
 table {
     border-spacing: 0;
     border-collapse: collapse;
@@ -57,6 +61,24 @@ textarea {
     font-family: inherit;
     font-size: inherit;
     line-height: inherit;
+}
+
+button,
+html input[type="button"],
+input[type="reset"],
+input[type="submit"] {
+    -webkit-appearance: button;
+    cursor: pointer;
+}
+
+[role="button"] {
+    cursor: pointer;
+}
+
+button::-moz-focus-inner,
+input::-moz-focus-inner {
+    padding: none;
+    border: none;
 }
 
 input {
@@ -80,10 +102,35 @@ input {
     }
 }
 
+button {
+    overflow: visible;
+    text-transform: none;
+}
+
 select {
     text-transform: none;
 
     &[multiple] {
         height: auto;
     }
+}
+
+textarea {
+    overflow: auto;
+}
+
+fieldset {
+    min-width: 0;
+    border: none;
+}
+
+label {
+    display: inline-block;
+    max-width: 100%;
+    margin-bottom: 0.25rem;
+    font-weight: 700;
+}
+
+optgroup {
+    font-weight: 700;
 }
